Метод .of [#349950]